Proper list creation methods, removed unnecessary condition