@@ -290,11 +290,10 @@ public class Generator implements IGenerator, Closeable {
 			return;
 		}
 
-		getModElementGeneratorTemplatesList(generatableElement, true).forEach(template -> {
-			if (workspace.getFolderManager().isFileInWorkspace(template.getFile())) {
+		for (GeneratorTemplate template : getModElementGeneratorTemplatesList(generatableElement, true)) {
+			if (workspace.getFolderManager().isFileInWorkspace(template.getFile()))
 				template.getFile().delete();
-			}
-		});
+		}
 
 		// delete localization keys associated with the mod element
 		LocalizationUtils.deleteLocalizationKeys(this, generatableElement, (List<?>) map.get("localizationkeys"));
@@ -385,7 +384,7 @@ public class Generator implements IGenerator, Closeable {
 		if (templates != null)
 			return processTemplateDefinitionsToGeneratorTemplates(templates, performFSTasks, templateID);
 
-		return Collections.emptyList();
+		return new ArrayList<>();
 	}
 
 	private List<GeneratorTemplate> processTemplateDefinitionsToGeneratorTemplates(@Nonnull List<?> templates, boolean performFSTasks,
@@ -432,7 +431,7 @@ public class Generator implements IGenerator, Closeable {
 		if (map == null) {
 			LOG.info("Failed to load element definition for mod element type " + generatableElement.getModElement()
 					.getType().getRegistryName());
-			return Collections.emptyList();
+			return new ArrayList<>();
 		}
 
 		Set<GeneratorTemplate> files = new HashSet<>();
@@ -483,7 +482,7 @@ public class Generator implements IGenerator, Closeable {
 		if (map == null) {
 			LOG.info("Failed to load element list templates definition for mod element type "
 					+ generatableElement.getModElement().getType().getRegistryName());
-			return Collections.emptyList();
+			return new ArrayList<>();
 		}
 
 		Set<GeneratorTemplatesList> fileLists = new HashSet<>();
@@ -500,13 +499,13 @@ public class Generator implements IGenerator, Closeable {
 				// we check type of list data collection and convert it to a list if needed
 				List<?> items;
 				if (listData instanceof Map<?, ?> listMap)
-					items = new ArrayList<>(listMap.entrySet());
+					items = Collections.unmodifiableList(new ArrayList<>(listMap.entrySet()));
 				else if (listData instanceof Collection<?> collection)
-					items = new ArrayList<>(collection);
+					items = Collections.unmodifiableList(new ArrayList<>(collection));
 				else if (listData instanceof Iterable<?> iterable) // fallback for the worst case
-					items = StreamSupport.stream(iterable.spliterator(), false).collect(Collectors.toList());
+					items = StreamSupport.stream(iterable.spliterator(), false).toList();
 				else
-					items = new ArrayList<>();
+					items = Collections.emptyList();
 				if (templates != null) {
 					for (Object template : templates) {
 						GeneratorTemplate generatorTemplate = new GeneratorTemplate(new File((String) ((Map<?, ?>) template).get("name")),
@@ -516,7 +515,7 @@ public class Generator implements IGenerator, Closeable {
 						// we store file generation conditions for current mod element
 						List<Boolean> conditionChecks = new ArrayList<>();
 						for (int i = 0; i < items.size(); i++) {
-							conditionChecks.add(i, 
+							conditionChecks.add(i,
 									!generatorTemplate.shouldBeSkippedBasedOnCondition(this, items.get(i)));
 						}
 
@@ -531,12 +530,8 @@ public class Generator implements IGenerator, Closeable {
 						templateID++;
 					}
 
-					// only add templates list if at least one list template would be generated
-					// or if we need all template lists possible for the given mod element (performFSTasks is false)
-					if (!items.isEmpty() || !performFSTasks) {
-						fileLists.add(new GeneratorTemplatesList(groupName, Collections.unmodifiableList(items),
-								generatableElement, Collections.unmodifiableMap(files)));
-					}
+					fileLists.add(new GeneratorTemplatesList(groupName, items, generatableElement,
+							Collections.unmodifiableMap(files)));
 				}
 			}
 		}
